Updated app to include proper routing and PWA support. App also now pulls info from backend DjangoDB.

--- a/mobileBackend/mobileFrontend/src/index.html
+++ b/mobileBackend/mobileFrontend/src/index.html
@@ -60,6 +60,8 @@
       }
     }
   </style>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <abe-root>
@@ -74,5 +76,6 @@
   
    
   </abe-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
