--- a/frontend/my-app/src/index.html
+++ b/frontend/my-app/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equic="expires " content="0 ">
     
     <meta charset="utf-8 ">
-    <title>Revolution</title>
+    <title>QuantumKnots</title>
     <base href="/ ">
 
     <meta name="viewport " content="width=device-width, initial-scale=1 ">
@@ -77,14 +77,14 @@
 </head>
 
 <body style="margin:0px; padding:0px">
-    <rev-root>
+    <qk-root>
         <div class="app-loading ">
             <div class="logo" ></div>
             <svg class="spinner " viewBox="25 25 50 50 ">
                 <circle class="path " cx="50 " cy="50 " r="20 " fill="none " stroke-width="2 " stroke-miterlimit="10 "/> 
             </svg>
         </div>
-    </rev-root>
+    </qk-root>
     <noscript>Please enable javascript to continue using this application</noscript>
 </body>
 </html>
